# Mini-GPU

./: .gitignore  CMakeLists.txt  compiler_instructions.md
compiler/: README.md  ast_to_ir.py  get_cuda_ast.py  ir_to_isa.py  isa_to_bin.py  minigpucc.py
docs/: gpu_architecture_plan.md  pytorch_backend_plan.md
gpu_comm/: __init__.py  __init__.pyi
gpu_comm/bindings/: python_bindings.cpp
gpu_comm/src/: com.c  com.h  constants.h
hardware/constraints/: basys3_mini_gpu.xdc
hardware/rtl/common/: instruction_decode.v
hardware/rtl/core/: block.v  mini_gpu.v  mini_gpu_core.v  sm.v  warp.v
hardware/rtl/include/: minigpu_isa.vh
hardware/rtl/lane/: execute.v  regfile.v  thread.v
hardware/rtl/lane/float/: add_sub.v  div.v  mul.v  shared_fpu.v
hardware/rtl/lane/int/: div_mod_iterative.v  mul.v
hardware/rtl/memory/: memory.v  memory_bank.v
hardware/rtl/top/: basys3_mini_gpu_top.v
hardware/tb/: basys3_mini_gpu_top_tb.v  execute_tb.v  instruction_decode_tb.v  memory_tb.v  mini_gpu_core_tb.v  mini_gpu_program_tb.v  mini_gpu_scheduler_tb.v  sm_tb.v  thread_tb.v
hardware/tb/programs/: vector_add.const  vector_add.expect  vector_add.mem
hardware/tools/: asm_to_tb_hex.py  vivado_synth_basys3.tcl  vivado_synth_basys3_variant.tcl  vivado_synth_memory.tcl
runtime/include/: minigpu_runtime.hpp
runtime/src/: minigpu_runtime.cpp
test/cuda/: matmul.cu  relu.cu  vector_add.cu
test/runtime/: runtime_smoke.cpp
test/uart/: test_uart.py
torch_ext/include/: minigpu_torch.hpp
torch_ext/src/: minigpu_torch.cpp
torch_ext/src/backend/: state.cpp  transport.cpp
torch_ext/src/bindings/: module.cpp
torch_ext/src/ops/: math.cpp  tensor.cpp
torch_ext/src/registrations/: aten.cpp  custom.cpp
torch_mini_gpu/: __init__.py  backend.py  ops.py
uart_gpu_comm/: __init__.py  __init__.pyi
uart_gpu_comm/bindings/: python_bindings.cpp
uart_gpu_comm/src/: CONSTANTS.h  UART.c  UART.h
